--- a/portfolio-website/src/Components/Navigation.css
+++ b/portfolio-website/src/Components/Navigation.css
@@ -151,6 +151,6 @@ nav {
   }
 
   .navMenu li {
-    margin: 5px 0;
+    margin: 10px 0;
   }
 }
