--- a/portfolio-website/src/Components/Portfolio.css
+++ b/portfolio-website/src/Components/Portfolio.css
@@ -3,7 +3,6 @@
   padding: 20px;
 }
 
-
 .portfolio-content {
   display: flex;
   justify-content: space-between;
@@ -27,7 +26,7 @@
 }
 
 .card-main img {
- grid-column: 1 / 2;
+  grid-column: 1 / 2;
   width: 100%;
   border-radius: 10px;
   object-fit: cover;
@@ -62,7 +61,13 @@
   .card-main img {
     width: 100%;
   }
-  .card{
+  .card {
     width: 100%;
+
+    border: none;
+    box-shadow: none;
+  }
+  h2 {
+    text-align: center;
   }
 }
