--- a/portfolio-website/src/Components/Testimonials.css
+++ b/portfolio-website/src/Components/Testimonials.css
@@ -1,69 +1,72 @@
 .testimonials {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .row {
-    display: flex;
-    gap: 20px;
+  display: flex;
+  gap: 20px;
 }
 
 .card {
-    flex: 1;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 20px;
-    position: relative;
+  flex: 1;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 20px;
+  position: relative;
 }
 
 .card-body {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .rating {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    display: flex;
-    gap: 5px;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  display: flex;
+  gap: 5px;
 }
 
 .card-footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 20px;
-    background: linear-gradient(to right, #cf647f, rgb(241, 203, 203));
-    padding: 10px;
- 
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+  background: linear-gradient(to right, #cf647f, rgb(241, 203, 203));
+  padding: 10px;
 }
 
 .card-footer img {
-    width: 50px;
-    height: 50px;
-    border-radius: 5px;
-    
+  width: 50px;
+  height: 50px;
+  border-radius: 5px;
 }
 
 /* media queries */
 
 @media screen and (max-width: 780px) {
-    .testimonials {
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
+  .testimonials {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 
-    .row {
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
+  .row {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 
-    .card {
-        width: 100%;
-    }
+  .card {
+    width: 100%;
+    border: none;
+    box-shadow: none;
+  }
+  h3 {
+    text-align: left;
+  }
 }
